--- a/config_currently_showing.json
+++ b/config_currently_showing.json
@@ -3,6 +3,6 @@
   "output_file": "art/currently-showing.html",
   "header_logo": "page-header-assets/logo.png",
   "header_title": "page-header-assets/currently-showing.png",
-  "page_title": "Currently Showing - John Woodruff"
+  "page_title": "Currently Showing - John Woodruff",
   "include_purchase_button": true
 }
